支持读取 UTF8-BOM 的 libconfig 配置文件 (#348)

--- a/conf/channels.conf
+++ b/conf/channels.conf
@@ -1,17 +1,17 @@
-//--------------------------------------------------------------
-// ÆµµÀÏµÍ³ÅäÖÃÎÄ¼ş
-// ÌáÊ¾: ´ËÎÄ¼şÃ»ÓĞÈÎºÎÖØĞÂ¼ÓÔØµÄÖ¸Áî, ĞŞ¸Äºó±ØĞëÖØÆôµØÍ¼·şÎñÆ÷²ÅÄÜÉúĞ§.
+ï»¿//--------------------------------------------------------------
+// é¢‘é“ç³»ç»Ÿé…ç½®æ–‡ä»¶
+// æç¤º: æ­¤æ–‡ä»¶æ²¡æœ‰ä»»ä½•é‡æ–°åŠ è½½çš„æŒ‡ä»¤, ä¿®æ”¹åå¿…é¡»é‡å¯åœ°å›¾æœåŠ¡å™¨æ‰èƒ½ç”Ÿæ•ˆ.
 //--------------------------------------------------------------
 
 channel_config: {
 
-	/* ÑÕÉ«Ãû³ÆÓëÑÕÉ«´úÂë¶ÔÕÕ±í */
+	/* é¢œè‰²åç§°ä¸é¢œè‰²ä»£ç å¯¹ç…§è¡¨ */
 	colors: {
 		/**
-		 * ÑÕÉ«Ãû³Æ : ´ËÃû³Æ¶ÔÓ¦µÄÊ®Áù½øÖÆÑÕÉ«´úÂë
+		 * é¢œè‰²åç§° : æ­¤åç§°å¯¹åº”çš„åå…­è¿›åˆ¶é¢œè‰²ä»£ç 
 		 *
-		 * ³ı·ÇÍæ¼ÒÔÚÊ¹ÓÃ @channel Ö¸ÁîÊ±Ö¸¶¨ÁË¾ßÌåµÄÏûÏ¢ÑÕÉ«,
-		 * ·ñÔòÍæ¼Ò´´½¨µÄÆµµÀ½«Ê¹ÓÃ Default Ëù¶ÔÓ¦µÄÉ«Öµ×÷ÎªÏûÏ¢ÑÕÉ«.
+		 * é™¤éç©å®¶åœ¨ä½¿ç”¨ @channel æŒ‡ä»¤æ—¶æŒ‡å®šäº†å…·ä½“çš„æ¶ˆæ¯é¢œè‰²,
+		 * å¦åˆ™ç©å®¶åˆ›å»ºçš„é¢‘é“å°†ä½¿ç”¨ Default æ‰€å¯¹åº”çš„è‰²å€¼ä½œä¸ºæ¶ˆæ¯é¢œè‰².
 		 **/
 		Default: "0xffffff"
 		Red: "0xff0000"
@@ -24,23 +24,23 @@ channel_config: {
 		Purple: "0xD67FFF"
 		LightGreen: "0xB6FF00"
 		Normal: "0x00ff00"
-		/* ÔÚÕâÀï¿ÉÒÔÌí¼ÓÈÎºÎÄãÏëÒªµÄÑÕÉ«´úÂëÅäÖÃ */
+		/* åœ¨è¿™é‡Œå¯ä»¥æ·»åŠ ä»»ä½•ä½ æƒ³è¦çš„é¢œè‰²ä»£ç é…ç½® */
 	}
 
 	/**
-	 * Íæ¼Ò×Ô½¨µÄË½ÓĞÆµµÀÉèÖÃ
+	 * ç©å®¶è‡ªå»ºçš„ç§æœ‰é¢‘é“è®¾ç½®
 	 * - Always CHAN_TYPE_PUBLIC
 	 * - Always displayed in chat log as "#channel_name: <name>: <chat>"
 	 * - ID of private channels start at 1000
 	 **/
 	private_channel: {
-		allow: true			  // (bool)ÊÇ·ñÔÊĞíÍæ¼Ò½¨Á¢×Ô¼ºµÄÁÄÌìÆµµÀ?
-		color: "Default"	  // (string)	ÆµµÀµÄÏûÏ¢ÑÕÉ«
-		delay: 1000			  // (int)		ÔÚ´ËÆµµÀÖĞµÄ·¢ÑÔµÄ¼ä¸ôÊ±¼ä(µ¥Î»ÎªºÁÃë, ÓµÓĞ channel_admin È¨ÏŞµÄÕËºÅ²»ÊÜÏŞÖÆ)
-		max_member: 1000	  // (int)		Ã¿¸öÆµµÀµÄ×î´ó³ÉÔ±ÊıÁ¿
-		self_notif: true	  // (bool)		µ±Íæ¼Ò¼ÓÈë»òÀë¿ªÒ»¸öÆµµÀÊ±, ÊÇ·ñÏÔÊ¾Ò»¸ö½öËû±¾ÈË¿É¼ûµÄÌáÊ¾ĞÅÏ¢
-		join_notif: false	  // (bool)		µ±ÓĞÈË¼ÓÈëÆµµÀÊ±, ÆäËûÈËÊÇ·ñÏÔÊ¾ÌáÊ¾ÏûÏ¢
-		leave_notif: false	  // (bool)		µ±ÓĞÈËÀë¿ªÆµµÀÊ±, ÆäËûÈËÊÇ·ñÏÔÊ¾ÌáÊ¾ÏûÏ¢ (ÍË³öÓÎÏ·²¢²»ËãÀë¿ª, Ö»ÓĞÊ¹ÓÃ @channel leave #xx Ö¸Áî²Å»áÓĞÏûÏ¢)
+		allow: true			  // (bool)æ˜¯å¦å…è®¸ç©å®¶å»ºç«‹è‡ªå·±çš„èŠå¤©é¢‘é“?
+		color: "Default"	  // (string)	é¢‘é“çš„æ¶ˆæ¯é¢œè‰²
+		delay: 1000			  // (int)		åœ¨æ­¤é¢‘é“ä¸­çš„å‘è¨€çš„é—´éš”æ—¶é—´(å•ä½ä¸ºæ¯«ç§’, æ‹¥æœ‰ channel_admin æƒé™çš„è´¦å·ä¸å—é™åˆ¶)
+		max_member: 1000	  // (int)		æ¯ä¸ªé¢‘é“çš„æœ€å¤§æˆå‘˜æ•°é‡
+		self_notif: true	  // (bool)		å½“ç©å®¶åŠ å…¥æˆ–ç¦»å¼€ä¸€ä¸ªé¢‘é“æ—¶, æ˜¯å¦æ˜¾ç¤ºä¸€ä¸ªä»…ä»–æœ¬äººå¯è§çš„æç¤ºä¿¡æ¯
+		join_notif: false	  // (bool)		å½“æœ‰äººåŠ å…¥é¢‘é“æ—¶, å…¶ä»–äººæ˜¯å¦æ˜¾ç¤ºæç¤ºæ¶ˆæ¯
+		leave_notif: false	  // (bool)		å½“æœ‰äººç¦»å¼€é¢‘é“æ—¶, å…¶ä»–äººæ˜¯å¦æ˜¾ç¤ºæç¤ºæ¶ˆæ¯ (é€€å‡ºæ¸¸æˆå¹¶ä¸ç®—ç¦»å¼€, åªæœ‰ä½¿ç”¨ @channel leave #xx æŒ‡ä»¤æ‰ä¼šæœ‰æ¶ˆæ¯)
 		/* Moderation feature for channel owner, allowed to: */
 		ban: true			  // (bool)	Ban players
 		kick: true			  // (bool)	Kick players
@@ -49,28 +49,28 @@ channel_config: {
 	}
 
 	/**
-	 * ·şÎñÆ÷Ä¬ÈÏÄÚÖÃµÄ¹«¹²ÆµµÀ
+	 * æœåŠ¡å™¨é»˜è®¤å†…ç½®çš„å…¬å…±é¢‘é“
 	 **/
 	channels: (
 	/**
-	 * ½á¹¹ËµÃ÷
+	 * ç»“æ„è¯´æ˜
 	{
-		name: "#channel"		 // (string)	ÆµµÀÃû³Æ
-		password: ""			 // (string)	ÆµµÀÃÜÂë
-		alias: "[Channel]"		 // (string)	·¢ËÍµ½´ËÆµµÀµÄÏûÏ¢, ÔÚÁÄÌìÀ¸ÖĞÏÔÊ¾µÄÇ°×ºĞÅÏ¢, ÆÕ±éÉèÖÃÎªÆµµÀÃû³Æ
-		color: "Default"		 // (string)	ÆµµÀµÄÏûÏ¢ÑÕÉ«
-		type: "CHAN_TYPE_PUBLIC" // (string)	ÆµµÀµÄÀàĞÍ: CHAN_TYPE_PUBLIC, CHAN_TYPE_ALLY, CHAN_TYPE_MAP
-		autojoin: false			 // (bool)		Íæ¼ÒÊÇ·ñ»áÔÚ½øÈëÓÎÏ·ºó×Ô¶¯¼ÓÈë´ËÆµµÀ
-		delay: 1000				 // (int)		ÔÚ´ËÆµµÀÖĞµÄ·¢ÑÔµÄ¼ä¸ôÊ±¼ä(µ¥Î»ÎªºÁÃë, ÓµÓĞ channel_admin È¨ÏŞµÄÕËºÅ²»ÊÜÏŞÖÆ)
-		leave: true				 // (bool)		ÊÇ·ñÔÊĞíÍæ¼ÒÀë¿ª´ËÆµµÀ
-		chat: true				 // (bool)		ÔÚ´ËÆµµÀÖĞÍæ¼ÒÊÇ·ñ¿ÉÒÔÁÄÌì(ÈôÎª false ÔòÖ»ÓĞÓµÓĞ channel_admin È¨ÏŞµÄÕËºÅ²ÅÄÜÁÄÌì, È¨ÏŞÉèÖÃ¼û conf/groups.conf)
+		name: "#channel"		 // (string)	é¢‘é“åç§°
+		password: ""			 // (string)	é¢‘é“å¯†ç 
+		alias: "[Channel]"		 // (string)	å‘é€åˆ°æ­¤é¢‘é“çš„æ¶ˆæ¯, åœ¨èŠå¤©æ ä¸­æ˜¾ç¤ºçš„å‰ç¼€ä¿¡æ¯, æ™®éè®¾ç½®ä¸ºé¢‘é“åç§°
+		color: "Default"		 // (string)	é¢‘é“çš„æ¶ˆæ¯é¢œè‰²
+		type: "CHAN_TYPE_PUBLIC" // (string)	é¢‘é“çš„ç±»å‹: CHAN_TYPE_PUBLIC, CHAN_TYPE_ALLY, CHAN_TYPE_MAP
+		autojoin: false			 // (bool)		ç©å®¶æ˜¯å¦ä¼šåœ¨è¿›å…¥æ¸¸æˆåè‡ªåŠ¨åŠ å…¥æ­¤é¢‘é“
+		delay: 1000				 // (int)		åœ¨æ­¤é¢‘é“ä¸­çš„å‘è¨€çš„é—´éš”æ—¶é—´(å•ä½ä¸ºæ¯«ç§’, æ‹¥æœ‰ channel_admin æƒé™çš„è´¦å·ä¸å—é™åˆ¶)
+		leave: true				 // (bool)		æ˜¯å¦å…è®¸ç©å®¶ç¦»å¼€æ­¤é¢‘é“
+		chat: true				 // (bool)		åœ¨æ­¤é¢‘é“ä¸­ç©å®¶æ˜¯å¦å¯ä»¥èŠå¤©(è‹¥ä¸º false åˆ™åªæœ‰æ‹¥æœ‰ channel_admin æƒé™çš„è´¦å·æ‰èƒ½èŠå¤©, æƒé™è®¾ç½®è§ conf/groups.conf)
 		color_override: false	 // (bool)		Allow players to change the private channel color to their own
-		self_notif: true		 // (bool)		µ±Íæ¼Ò¼ÓÈë»òÀë¿ªÒ»¸öÆµµÀÊ±, ÊÇ·ñÏÔÊ¾Ò»¸ö½öËû±¾ÈË¿É¼ûµÄÌáÊ¾ĞÅÏ¢
-		join_notif: false		 // (bool)		µ±ÓĞÈË¼ÓÈëÆµµÀÊ±, ÆäËûÈËÊÇ·ñÏÔÊ¾ÌáÊ¾ÏûÏ¢
-		leave_notif: false		 // (bool)		µ±ÓĞÈËÀë¿ªÆµµÀÊ±, ÆäËûÈËÊÇ·ñÏÔÊ¾ÌáÊ¾ÏûÏ¢ (ÍË³öÓÎÏ·²¢²»ËãÀë¿ª, Ö»ÓĞÊ¹ÓÃ @channel leave #xx Ö¸Áî²Å»áÓĞÏûÏ¢)
+		self_notif: true		 // (bool)		å½“ç©å®¶åŠ å…¥æˆ–ç¦»å¼€ä¸€ä¸ªé¢‘é“æ—¶, æ˜¯å¦æ˜¾ç¤ºä¸€ä¸ªä»…ä»–æœ¬äººå¯è§çš„æç¤ºä¿¡æ¯
+		join_notif: false		 // (bool)		å½“æœ‰äººåŠ å…¥é¢‘é“æ—¶, å…¶ä»–äººæ˜¯å¦æ˜¾ç¤ºæç¤ºæ¶ˆæ¯
+		leave_notif: false		 // (bool)		å½“æœ‰äººç¦»å¼€é¢‘é“æ—¶, å…¶ä»–äººæ˜¯å¦æ˜¾ç¤ºæç¤ºæ¶ˆæ¯ (é€€å‡ºæ¸¸æˆå¹¶ä¸ç®—ç¦»å¼€, åªæœ‰ä½¿ç”¨ @channel leave #xx æŒ‡ä»¤æ‰ä¼šæœ‰æ¶ˆæ¯)
 		groupid: (0,..,99)		 // (list,int)	Only players with valid group IDs are allowed to join. Group with 'channel_admin' can always enter the channel.
 		/// All values above are default settings
-	},							 // Èç¹ûÕâ²»ÊÇ×îºóÒ»¸öÆµµÀÉèÖÃ, Çë¼ÇµÃÔÚ"ÓÒ´óÀ¨ºÅ"ºóÌí¼ÓÒ»¸ö"Ó¢ÎÄ¶ººÅ"
+	},							 // å¦‚æœè¿™ä¸æ˜¯æœ€åä¸€ä¸ªé¢‘é“è®¾ç½®, è¯·è®°å¾—åœ¨"å³å¤§æ‹¬å·"åæ·»åŠ ä¸€ä¸ª"è‹±æ–‡é€—å·"
 	 **/
 	{
 		name: "#global"
@@ -82,16 +82,16 @@ channel_config: {
 		leave: false
 	},
 	{
-		name: "#ÎÊ´ğ"
-		alias: "[ÎÊ´ğ]"
+		name: "#support"
+		alias: "[Support]"
 		color: "Blue"
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
 		autojoin: false
 	},
 	{
-		name: "#½»Ò×"
-		alias: "[½»Ò×]"
+		name: "#trade"
+		alias: "[Trade]"
 		color: "LightGreen"
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
@@ -100,14 +100,14 @@ channel_config: {
 	)
 
 	/**
-	 * ¹«»áÍ¬ÃËÆµµÀÉèÖÃ
-	 * ÉèÖÃ½á¹¹µÄËµÃ÷, Çë¼ûÉÏ·½µÄ 'channels' ½á¹¹ËµÃ÷
+	 * å…¬ä¼šåŒç›Ÿé¢‘é“è®¾ç½®
+	 * è®¾ç½®ç»“æ„çš„è¯´æ˜, è¯·è§ä¸Šæ–¹çš„ 'channels' ç»“æ„è¯´æ˜
 	 **/
 	ally: {
-		name: "#Í¬ÃË"
-		alias: "[Í¬ÃË]"
+		name: "#ally"
+		alias: "[Ally]"
 		color: "Green"
-		type: "CHAN_TYPE_ALLY" // ²»ÒªĞŞ¸Ä´Ë´¦µÄÖµ, ·ñÔò¹¦ÄÜ½«³öÏÖÒì³£
+		type: "CHAN_TYPE_ALLY" // ä¸è¦ä¿®æ”¹æ­¤å¤„çš„å€¼, å¦åˆ™åŠŸèƒ½å°†å‡ºç°å¼‚å¸¸
 		delay: 1000
 		autojoin: false
 		leave: true
@@ -115,14 +115,14 @@ channel_config: {
 	}
 
 	/**
-	 * µØÍ¼ÆµµÀÉèÖÃ
-	 * ÉèÖÃ½á¹¹µÄËµÃ÷, Çë¼ûÉÏ·½µÄ 'channels' ½á¹¹ËµÃ÷
+	 * åœ°å›¾é¢‘é“è®¾ç½®
+	 * è®¾ç½®ç»“æ„çš„è¯´æ˜, è¯·è§ä¸Šæ–¹çš„ 'channels' ç»“æ„è¯´æ˜
 	 **/
 	map: {
-		name: "#µØÍ¼"
-		alias: "[µØÍ¼]"
+		name: "#map"
+		alias: "[Map]"
 		color: "Yellow"
-		type: "CHAN_TYPE_MAP" // ²»ÒªĞŞ¸Ä´Ë´¦µÄÖµ, ·ñÔò¹¦ÄÜ½«³öÏÖÒì³£
+		type: "CHAN_TYPE_MAP" // ä¸è¦ä¿®æ”¹æ­¤å¤„çš„å€¼, å¦åˆ™åŠŸèƒ½å°†å‡ºç°å¼‚å¸¸
 		delay: 1000
 		autojoin: false
 		leave: true
