实现 unlockcmd 脚本指令, 用于解锁实时事件和过滤器事件中的指令限制

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1020,6 +1020,8 @@ Body:
   Translation: ""
 - Original: "If you are using an old version of MySQL consider upgrading to a newer release.\n"
   Translation: ""
+- Original: "If you insist and know what you are doing, you can use the 'unlockcmd' command to lift the restriction.\n"
+  Translation: "若您知道可能潜在的副作用且坚持需要, 可以使用 'unlockcmd' 脚本指令来解锁限制.\n"
 - Original: "Illegal data format: GRF compress entry size\n"
   Translation: ""
 - Original: "In function _vShowMessage() -> Invalid flag passed.\n"
@@ -1525,7 +1527,7 @@ Body:
 - Original: "Player AID:%d/CID:%d logged off.\n"
   Translation: ""
 - Original: "Please don't use '%s' command in '%s' event.\n"
-  Translation: ""
+  Translation: "使用 '%s' 脚本指令时被拒绝, 因为该指令默认无法用于 '%s' 事件.\n"
 - Original: "Please edit your 'login' table to create a proper inter-server user/password (gender 'S')\n"
   Translation: "请在 'login' 数据表中, 为性别为 'S' 的内部通讯账号设置新的账号/密码.\n"
 - Original: "Please input channel 'name' at '%s' line '%d'! Skipping...\n"
@@ -3002,6 +3004,8 @@ Body:
   Translation: ""
 - Original: "buildin_unloadnpc: npc '%s' was not found.\n"
   Translation: ""
+- Original: "buildin_unlockcmd: This command can only be used for Filter or Express Event.\n"
+  Translation: "buildin_unlockcmd: 该指令只能被用于实时事件或者过滤器事件.\n"
 - Original: "buildin_vip_status: Unsupported type %d.\n"
   Translation: ""
 - Original: "buildin_waitingroom2bg_single: Map %s requires the mapflag MF_BATTLEGROUND.\n"
@@ -3034,6 +3038,8 @@ Body:
   Translation: ""
 - Original: "cashshop_read_db_sql: Cannot process table '%s' at line '%d', skipping...\n"
   Translation: ""
+- Original: "channel_create: Duplicate channel name '%s', skipping.\n"
+  Translation: "channel_create: 想建立的频道名称 '%s' 已被占用, 请更换频道名称.\n"
 - Original: "channel_delete: Channel name '%s' is invalid.\n"
   Translation: ""
 - Original: "char : A tables is missing in sql-server, please fix it, see (sql-files main.sql for structure) \n"
@@ -3220,6 +3226,8 @@ Body:
   Translation: ""
 - Original: "conf/char_athena.conf:char_del_option birthdate is enabled but it requires PACKETVER 2010-08-03 or newer, defaulting to email...\n"
   Translation: ""
+- Original: "conf_read_file: file is not found: %s\n"
+  Translation: "conf_read_file: 无法找到文件: %s\n"
 - Original: "connect_check: Connection from %d.%d.%d.%d %s\n"
   Translation: ""
 - Original: "connect_check: DDoS Attack detected from %d.%d.%d.%d!\n"
