--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -306,6 +306,8 @@ Body:
   Translation: ""
 - Original: "%s: Player with nick '%s' is not found.\n"
   Translation: ""
+- Original: "%s: The battle record type is not invalid.\n"
+  Translation: "%s: 指定的戰鬥記錄型別無效, 請檢查.\n"
 - Original: "%s: The counter name '%s' is not exists, please initialize before using.\n"
   Translation: "%s: 效能計數器 '%s' 不存在, 在使用之前請先初始化它.\n"
 - Original: "%s: Title System it requires PACKETVER 2015-05-13 or newer...\n"
@@ -1754,16 +1756,6 @@ Body:
   Translation: "正在結束...\n"
 - Original: "The Map-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "地圖伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
-- Original: "The No.%d parameter (%s) can not be found.\n"
-  Translation: ""
-- Original: "The No.%d parameter (%s) is not integer type.\n"
-  Translation: ""
-- Original: "The No.%d parameter (%s) is not string type.\n"
-  Translation: ""
-- Original: "The No.%d parameter can not be found.\n"
-  Translation: ""
-- Original: "The No.%d parameter is not string type.\n"
-  Translation: ""
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d).\n\n"
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
@@ -2156,6 +2148,8 @@ Body:
   Translation: ""
 - Original: "bq_queue_join_solo: Could not find battleground \"%s\" requested by %s (AID: %d / CID: %d)\n"
   Translation: ""
+- Original: "buildin_%s: '%s' is not server variable, please attach to a player.\n"
+  Translation: "buildin_%s: '%s' 不是伺服器變數, 需要關聯到玩家才能使用.\n"
 - Original: "buildin_%s: Cannot use a player variable '%s' if no player is attached.\n"
   Translation: ""
 - Original: "buildin_%s: Invalid execute range '%d'.\n"
@@ -2196,12 +2190,34 @@ Body:
   Translation: ""
 - Original: "buildin_%s: not a variable\n"
   Translation: ""
+- Original: "buildin_%s: the No.%d parameter '%s' (%s) must be integer array type.\n"
+  Translation: "buildin_%s: 第 %d 個引數 '%s' (%s) 必須是一個數值型陣列.\n"
+- Original: "buildin_%s: the No.%d parameter '%s' (%s) must be string array type.\n"
+  Translation: "buildin_%s: 第 %d 個引數 '%s' (%s) 必須是一個字元型陣列.\n"
+- Original: "buildin_%s: the No.%d parameter '%s' must be integer array type.\n"
+  Translation: "buildin_%s: 第 %d 個引數 '%s' 必須是一個數值型陣列.\n"
+- Original: "buildin_%s: the No.%d parameter '%s' must be string array type.\n"
+  Translation: "buildin_%s: 第 %d 個引數 '%s' 必須是一個字元型陣列.\n"
+- Original: "buildin_%s: the No.%d parameter (%s) can not be found.\n"
+  Translation: "buildin_%s: 第 %d 個引數 (%s) 無法被找到, 請檢查是否忘記賦值.\n"
+- Original: "buildin_%s: the No.%d parameter (%s) must be integer type.\n"
+  Translation: "buildin_%s: 第 %d 個引數 (%s) 必須是一個數值型變數.\n"
+- Original: "buildin_%s: the No.%d parameter (%s) must be string type.\n"
+  Translation: "buildin_%s: 第 %d 個引數 (%s) 必須是一個字元型變數.\n"
+- Original: "buildin_%s: the No.%d parameter can not be found.\n"
+  Translation: "buildin_%s: 第 %d 個引數無法被找到, 請檢查是否忘記賦值.\n"
+- Original: "buildin_%s: the No.%d parameter must be integer type.\n"
+  Translation: "buildin_%s: 第 %d 個引數必須是一個數值型變數.\n"
+- Original: "buildin_%s: the No.%d parameter must be string type.\n"
+  Translation: "buildin_%s: 第 %d 個引數必須是一個字元型變數.\n"
 - Original: "buildin_%s: unknown item \"%s\".\n"
   Translation: ""
 - Original: "buildin_%s: unknown item \"%u\".\n"
   Translation: ""
 - Original: "buildin_%s: variable \"%s\" was not a server variable, but no player was attached.\n"
   Translation: ""
+- Original: "buildin_%s: variable '%s' is not a array.\n"
+  Translation: "buildin_%s: 指定的變數 '%s' 必須是一個陣列.\n"
 - Original: "buildin_achievementadd: Achievement '%d' doesn't exist.\n"
   Translation: ""
 - Original: "buildin_achievementadd: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
