--- a/src/map/map-server.vcxproj
+++ b/src/map/map-server.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="clif_obfuscation.hpp" />
     <ClInclude Include="clif_packetdb.hpp" />
     <ClInclude Include="clif_shuffle.hpp" />
+    <ClInclude Include="battlerec.hpp" />
     <ClInclude Include="date.hpp" />
     <ClInclude Include="duel.hpp" />
     <ClInclude Include="elemental.hpp" />
@@ -254,6 +255,7 @@
     <ClCompile Include="chrif.cpp" />
     <ClCompile Include="clan.cpp" />
     <ClCompile Include="clif.cpp" />
+    <ClCompile Include="battlerec.cpp" />
     <ClCompile Include="date.cpp" />
     <ClCompile Include="duel.cpp" />
     <ClCompile Include="elemental.cpp" />
