告知 batrec_rank 返回的 GID 数组中玩家单位将返回角色编号

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -363,7 +363,7 @@ Body:
 - Original: "(%s) mapindex_id2name: Requested name for non-existant map index [%d] in cache.\n"
   Translation: ""
 - Original: "(%s) mapindex_name2id: Map \"%s\" not found in index list!\n"
-  Translation: ""
+  Translation: "%s - mapindex_name2id: 无法从 map_index.txt 中找到 \"%s\" 地图!\n"
 - Original: "(NPC:'%s' (%s,%d,%d), player:'%s' (%d/%d), value:%d, amount:%d)\n"
   Translation: ""
 - Original: "(mapindex_add) Cannot add maps with no name.\n"
@@ -3983,7 +3983,7 @@ Body:
 - Original: "npc_parse_function: Missing left curly '%%TAB%%{' in file '%s', line '%d'. Skipping the rest of the file.\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parse_function: Overwriting user function [%s] (%s:%d)\n"
-  Translation: ""
+  Translation: "npc_parse_function: 已覆盖用户定义的 function [%s] 位于 '%s' 中第 '%d' 行\n"
 - Original: "npc_parse_mapflag: Invalid item ID '%d' supplied for mapflag 'pvp_nightmaredrop' (file '%s', line '%d'), removing.\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parse_mapflag: Invalid mapflag definition in file '%s', line '%d'.\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
@@ -4103,7 +4103,7 @@ Body:
 - Original: "npc_parsesrcfile: Unknown coordinates ('%d', '%d') for map '%s' in file '%s', line '%d'. Skipping line...\n"
   Translation: ""
 - Original: "npc_parsesrcfile: Unknown map '%s' in file '%s', line '%d'. Skipping line...\n"
-  Translation: ""
+  Translation: "npc_parsesrcfile: 使用了未知地图 '%s', 位于 '%s' 中第 '%d' 行. 已跳过...\n"
 - Original: "npc_parsesrcfile: Unknown syntax in file '%s', line '%d'. Stopping...\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parsesrcfile: w1 truncated, too much data (%d) in file '%s', line '%d'.\n"
