--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -306,6 +306,8 @@ Body:
   Translation: ""
 - Original: "%s: Player with nick '%s' is not found.\n"
   Translation: ""
+- Original: "%s: The battle record type is not invalid.\n"
+  Translation: "%s: 指定的战斗记录类型无效, 请检查.\n"
 - Original: "%s: The counter name '%s' is not exists, please initialize before using.\n"
   Translation: "%s: 性能计数器 '%s' 不存在, 在使用之前请先初始化它.\n"
 - Original: "%s: Title System it requires PACKETVER 2015-05-13 or newer...\n"
@@ -361,7 +363,7 @@ Body:
 - Original: "(%s) mapindex_id2name: Requested name for non-existant map index [%d] in cache.\n"
   Translation: ""
 - Original: "(%s) mapindex_name2id: Map \"%s\" not found in index list!\n"
-  Translation: ""
+  Translation: "%s - mapindex_name2id: 无法从 map_index.txt 中找到 \"%s\" 地图!\n"
 - Original: "(NPC:'%s' (%s,%d,%d), player:'%s' (%d/%d), value:%d, amount:%d)\n"
   Translation: ""
 - Original: "(mapindex_add) Cannot add maps with no name.\n"
@@ -1754,16 +1756,6 @@ Body:
   Translation: "正在结束...\n"
 - Original: "The Map-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "地图服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
-- Original: "The No.%d parameter (%s) can not be found.\n"
-  Translation: ""
-- Original: "The No.%d parameter (%s) is not integer type.\n"
-  Translation: ""
-- Original: "The No.%d parameter (%s) is not string type.\n"
-  Translation: ""
-- Original: "The No.%d parameter can not be found.\n"
-  Translation: ""
-- Original: "The No.%d parameter is not string type.\n"
-  Translation: ""
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d).\n\n"
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
@@ -2156,6 +2148,8 @@ Body:
   Translation: ""
 - Original: "bq_queue_join_solo: Could not find battleground \"%s\" requested by %s (AID: %d / CID: %d)\n"
   Translation: ""
+- Original: "buildin_%s: '%s' is not server variable, please attach to a player.\n"
+  Translation: "buildin_%s: '%s' 不是服务器变量, 需要关联到玩家才能使用.\n"
 - Original: "buildin_%s: Cannot use a player variable '%s' if no player is attached.\n"
   Translation: ""
 - Original: "buildin_%s: Invalid execute range '%d'.\n"
@@ -2196,12 +2190,34 @@ Body:
   Translation: ""
 - Original: "buildin_%s: not a variable\n"
   Translation: ""
+- Original: "buildin_%s: the No.%d parameter '%s' (%s) must be integer array type.\n"
+  Translation: "buildin_%s: 第 %d 个参数 '%s' (%s) 必须是一个数值型数组.\n"
+- Original: "buildin_%s: the No.%d parameter '%s' (%s) must be string array type.\n"
+  Translation: "buildin_%s: 第 %d 个参数 '%s' (%s) 必须是一个字符型数组.\n"
+- Original: "buildin_%s: the No.%d parameter '%s' must be integer array type.\n"
+  Translation: "buildin_%s: 第 %d 个参数 '%s' 必须是一个数值型数组.\n"
+- Original: "buildin_%s: the No.%d parameter '%s' must be string array type.\n"
+  Translation: "buildin_%s: 第 %d 个参数 '%s' 必须是一个字符型数组.\n"
+- Original: "buildin_%s: the No.%d parameter (%s) can not be found.\n"
+  Translation: "buildin_%s: 第 %d 个参数 (%s) 无法被找到, 请检查是否忘记赋值.\n"
+- Original: "buildin_%s: the No.%d parameter (%s) must be integer type.\n"
+  Translation: "buildin_%s: 第 %d 个参数 (%s) 必须是一个数值型变量.\n"
+- Original: "buildin_%s: the No.%d parameter (%s) must be string type.\n"
+  Translation: "buildin_%s: 第 %d 个参数 (%s) 必须是一个字符型变量.\n"
+- Original: "buildin_%s: the No.%d parameter can not be found.\n"
+  Translation: "buildin_%s: 第 %d 个参数无法被找到, 请检查是否忘记赋值.\n"
+- Original: "buildin_%s: the No.%d parameter must be integer type.\n"
+  Translation: "buildin_%s: 第 %d 个参数必须是一个数值型变量.\n"
+- Original: "buildin_%s: the No.%d parameter must be string type.\n"
+  Translation: "buildin_%s: 第 %d 个参数必须是一个字符型变量.\n"
 - Original: "buildin_%s: unknown item \"%s\".\n"
   Translation: ""
 - Original: "buildin_%s: unknown item \"%u\".\n"
   Translation: ""
 - Original: "buildin_%s: variable \"%s\" was not a server variable, but no player was attached.\n"
   Translation: ""
+- Original: "buildin_%s: variable '%s' is not a array.\n"
+  Translation: "buildin_%s: 指定的变量 '%s' 必须是一个数组.\n"
 - Original: "buildin_achievementadd: Achievement '%d' doesn't exist.\n"
   Translation: ""
 - Original: "buildin_achievementadd: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
@@ -3967,7 +3983,7 @@ Body:
 - Original: "npc_parse_function: Missing left curly '%%TAB%%{' in file '%s', line '%d'. Skipping the rest of the file.\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parse_function: Overwriting user function [%s] (%s:%d)\n"
-  Translation: ""
+  Translation: "npc_parse_function: 已覆盖用户定义的 function [%s] 位于 '%s' 中第 '%d' 行\n"
 - Original: "npc_parse_mapflag: Invalid item ID '%d' supplied for mapflag 'pvp_nightmaredrop' (file '%s', line '%d'), removing.\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parse_mapflag: Invalid mapflag definition in file '%s', line '%d'.\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
@@ -4087,7 +4103,7 @@ Body:
 - Original: "npc_parsesrcfile: Unknown coordinates ('%d', '%d') for map '%s' in file '%s', line '%d'. Skipping line...\n"
   Translation: ""
 - Original: "npc_parsesrcfile: Unknown map '%s' in file '%s', line '%d'. Skipping line...\n"
-  Translation: ""
+  Translation: "npc_parsesrcfile: 使用了未知地图 '%s', 位于 '%s' 中第 '%d' 行. 已跳过...\n"
 - Original: "npc_parsesrcfile: Unknown syntax in file '%s', line '%d'. Stopping...\n * w1=%s\n * w2=%s\n * w3=%s\n * w4=%s\n"
   Translation: ""
 - Original: "npc_parsesrcfile: w1 truncated, too much data (%d) in file '%s', line '%d'.\n"
