--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -427,7 +427,7 @@ Body:
 - Original: "An invalid Team is defined.\n"
   Translation: ""
 - Original: "And then change the user/password to use in conf/char_athena.conf (or conf/import/char_conf.txt)\n"
-  Translation: "在完成上述的数据库修改操作后, 还需要记得更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的账号/密码设置.\n"
+  Translation: "在完成上述的数据库修改操作后, 请更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的账号/密码设置.\n"
 - Original: "Asking to start pincode to AID: %d\n"
   Translation: ""
 - Original: "At least one mandatory node did not exist.\n"
