--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -427,7 +427,7 @@ Body:
 - Original: "An invalid Team is defined.\n"
   Translation: ""
 - Original: "And then change the user/password to use in conf/char_athena.conf (or conf/import/char_conf.txt)\n"
-  Translation: "在完成上述的資料庫修改操作後, 還需要記得更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的賬號/密碼設定.\n"
+  Translation: "在完成上述的資料庫修改操作後, 請更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的賬號/密碼設定.\n"
 - Original: "Asking to start pincode to AID: %d\n"
   Translation: ""
 - Original: "At least one mandatory node did not exist.\n"
