引入普通挂机模式, 专门用于 login 脚本指令

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1757,8 +1757,7 @@
 // 地图标记 - nomerc
 2008: 当前地图禁止使用佣兵, 已自动将其隐藏.
 2009: 很抱歉, 当前地图禁止召唤佣兵.
-
-//2010~2011: 空闲
+//2010~2011: 闲置
 
 // @title
 2012: 使用方法: @title <称号编号, 若设为 0 则取消称号>
@@ -1772,11 +1771,7 @@
 
 // 地图标记 - nocapture
 2018: 此地图禁止捕捉宠物, 请离开此地图后重试.
-
-// 离线挂店和挂机模式 - 被私聊时自动回复的信息
-2019: %s 当前处于离线摆摊模式, 无法接收或回复你的私聊信息.
-2020: %s 当前处于离线挂机模式, 无法接收或回复你的私聊信息.
-2021: %s 当前处于离开模式, 无法接收或回复你的私聊信息.
+//2019-2021: 闲置
 
 // 战斗配置选项 - show_mob_info
 // 让魔物名称显示更多信息时所呈现的具体文本 (感谢“瓜瓜”建议)
@@ -1796,7 +1791,7 @@
 2035: 天使
 2036: 龙系
 2037: 玩家
-// 2038-2050 预留给未来可能出现的新种族
+//2038-2050: 预留给未来可能出现的新种族
 
 // 编号为 2051 的消息左右无需添加中括号, 客户端会自动补充.
 2051: 属性:%s Lv.%d
@@ -1810,7 +1805,7 @@
 2059: 暗
 2060: 念
 2061: 不死
-// 2062-2080 预留给未来可能出现的新属性
+//2062-2080: 预留给未来可能出现的新属性
 
 // @suspend
 2081: 死亡时无法进入离线挂机模式, 请先复活.
@@ -1828,13 +1823,11 @@
 2089: 复兴前
 2090: 复兴后
 2091: 暂无数据
-
-//2092-2094 闲置
+//2092-2094: 闲置
 
 // 地图标记 - nomail
 2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
-
-//2096-2099 闲置
+//2096-2099: 闲置
 
 // @mapinfo
 2100: 熊猫地图标记:
@@ -1846,6 +1839,13 @@
 2104: 已关闭光环效果.
 2105: 很抱歉, 指定的光环编号无效, 请检查后重新输入.
 2106: 已重新加载光环组合数据库
+//2107-2110: 闲置
+
+// 离线挂机 - 被私聊时自动回复的信息
+2111: %s 当前处于离线摆摊, 无法接收或回复你的私聊信息.
+2112: %s 当前处于离线挂机, 无法接收或回复你的私聊信息.
+2113: %s 当前处于离开模式, 无法接收或回复你的私聊信息.
+2114: %s 当前处于普通挂机, 无法接收或回复你的私聊信息.
 
 // =============================================================
 // 熊猫模拟器拓展的消息 - 结束
