--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -122,6 +122,7 @@ atcmd_no_permission: 1
 //
 // &1: 离线挂机 (使用 @suspend 指令触发的挂机)
 // &2: 离开模式 (使用 @afk 指令触发的挂机)
+// &4: 普通模式 (使用 login 脚本指令触发的挂机)
 //
 // 默认值为: 3 (离线挂机 + 离开模式)
 suspend_monsterignore: 3
@@ -131,6 +132,7 @@ suspend_monsterignore: 3
 //
 // &1: 使用 @suspend 指令触发的离线挂机
 // &2: 使用 @afk 指令触发的离开模式 (AFK)
+// &4: 使用 login 脚本指令触发的挂机
 //
 // 默认值为: 2 (离开模式)
 suspend_whisper_response: 2
@@ -141,7 +143,7 @@ suspend_whisper_response: 2
 // -1 = 保持原状
 //
 //  1 = 西北      0 = 正北      7 = 东北
-/             ↖     |     ↗
+//            ↖     |     ↗
 //  2 = 正西  <-     +     ->   6 = 正东
 //            ↙     |     ↘
 //  3 = 西南      4 = 正南      5 = 东南
@@ -211,5 +213,40 @@ suspend_afk_sitdown: 1
 // 提示: 若设置为 0 则不改变头饰外观
 // 默认值为: 471 (AFK头饰)
 suspend_afk_headtop_viewid: 471
+
+// 使用 login 脚本指令将角色拉入普通挂机状态时,
+// 角色身体朝向哪个方位?
+// 
+// -1 = 保持原状
+//
+//  1 = 西北      0 = 正北      7 = 东北
+//            ↖     |     ↗
+//  2 = 正西  <-     +     ->   6 = 正东
+//            ↙     |     ↘
+//  3 = 西南      4 = 正南      5 = 东南
+//  
+// 默认值为: -1 (保持原状)
+suspend_normal_bodydirection: -1
+
+// 使用 login 脚本指令将角色拉入普通挂机状态时,
+// 角色头部朝向哪个方位?
+//
+// -1 = 保持原状
+//  0 = 相对于身体朝向的正前方, 头部看向正前方
+//  1 = 相对于身体朝向的正前方, 头部看向右看
+//  2 = 相对于身体朝向的正前方, 头部看向左看
+//
+// 默认值为: -1 (保持原状)
+suspend_normal_headdirection: -1
+
+// 使用 login 脚本指令将角色拉入普通挂机状态时,
+// 角色处于什么样的站立/坐下状态?
+//
+// -1 = 保持原状
+//  0 = 站立
+//  1 = 坐下
+//
+// 默认值为: -1 (保持原状)
+suspend_normal_sitdown: -1
 
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
