--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -49,8 +49,7 @@
 // 地圖示記 - nomerc
 2008: 目前地圖禁止使用傭兵, 已自動將其隱藏.
 2009: 很抱歉, 目前地圖禁止召喚傭兵.
-
-//2010~2011: 空閑
+//2010~2011: 閑置
 
 // @title
 2012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
@@ -64,11 +63,7 @@
 
 // 地圖示記 - nocapture
 2018: 此地圖禁止捕捉寵物, 請離開此地圖後重試.
-
-// 離線掛店和掛機模式 - 被私聊時自動回覆的資訊
-2019: %s 目前處於離線擺攤的掛店模式, 無法接收或回覆你的私聊資訊.
-2020: %s 目前處於離線掛機模式, 無法接收或回覆你的私聊資訊.
-2021: %s 目前處於離開模式, 無法接收或回覆你的私聊資訊.
+//2019-2021: 閑置
 
 // 戰鬥配置選項 - show_mob_info
 // 讓魔物名稱顯示更多資訊時所呈現的具體文字 (感謝「瓜瓜」建議)
@@ -88,7 +83,7 @@
 2035: 天使
 2036: 龍系
 2037: 玩家
-// 2038-2050 預留給未來可能出現的新種族
+//2038-2050: 預留給未來可能出現的新種族
 
 // 編號為 2051 的訊息左右無需新增中括號, 客戶端會自動補充.
 2051: 屬性:%s Lv.%d
@@ -102,7 +97,7 @@
 2059: 暗
 2060: 念
 2061: 不死
-// 2062-2080 預留給未來可能出現的新屬性
+//2062-2080: 預留給未來可能出現的新屬性
 
 // @suspend
 2081: 死亡時無法進入離線掛機模式, 請先復活.
@@ -120,13 +115,11 @@
 2089: 復興前
 2090: 復興后
 2091: 暫無數據
-
-//2092-2094 閑置
+//2092-2094: 閑置
 
 // 地圖示記 - nomail
 2095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
-
-//2096-2099 閑置
+//2096-2099: 閑置
 
 // @mapinfo
 2100: 熊貓地圖示記:
@@ -138,6 +131,13 @@
 2104: 已關閉光環效果.
 2105: 很抱歉, 指定的光環編號無效, 請檢查後重新輸入.
 2106: 已重新載入光環組合數據庫
+//2107-2110: 閑置
+
+// 離線掛機 - 被私聊時自動回覆的資訊
+2111: %s 目前處於離線擺攤, 無法接收或回覆你的私聊資訊.
+2112: %s 目前處於離線掛機, 無法接收或回覆你的私聊資訊.
+2113: %s 目前處於離開模式, 無法接收或回覆你的私聊資訊.
+2114: %s 目前處於普通掛機, 無法接收或回覆你的私聊資訊.
 
 // =============================================================
 // 熊貓模擬器拓展的訊息 - 結束
