--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -2091,7 +2091,7 @@ Body:
 - Original: "addmonsterdrop: bad mob id given %d\n"
   Translation: ""
 - Original: "and then edit your user/password in conf/map_athena.conf (or conf/import/map_conf.txt)\n"
-  Translation: "在完成上述的数据库修改操作后, 还需要记得更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的账号/密码设置.\n"
+  Translation: "在完成上述的数据库修改操作后, 请更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的账号/密码设置.\n"
 - Original: "areamobuseskill: invalid map name.\n"
   Translation: ""
 - Original: "at %s:%lu\n"
