实现 login 脚本指令, 用于将指定的角色以特定的登录模式拉上线 (#354)
* 修正挂机角色无法过传送点及 warp 和 unitwarp 无法召唤挂机角色的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -427,7 +427,7 @@ Body:
 - Original: "An invalid Team is defined.\n"
   Translation: ""
 - Original: "And then change the user/password to use in conf/char_athena.conf (or conf/import/char_conf.txt)\n"
-  Translation: "在完成上述的数据库修改操作后, 还需要记得更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的账号/密码设置.\n"
+  Translation: "在完成上述的数据库修改操作后, 请更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的账号/密码设置.\n"
 - Original: "Asking to start pincode to AID: %d\n"
   Translation: ""
 - Original: "At least one mandatory node did not exist.\n"
@@ -2091,7 +2091,7 @@ Body:
 - Original: "addmonsterdrop: bad mob id given %d\n"
   Translation: ""
 - Original: "and then edit your user/password in conf/map_athena.conf (or conf/import/map_conf.txt)\n"
-  Translation: "在完成上述的数据库修改操作后, 还需要记得更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的账号/密码设置.\n"
+  Translation: "在完成上述的数据库修改操作后, 请更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的账号/密码设置.\n"
 - Original: "areamobuseskill: invalid map name.\n"
   Translation: ""
 - Original: "at %s:%lu\n"
