補上cht的繁中檔案

--- a/conf/msg_conf/login_msg_cht.conf
+++ b/conf/msg_conf/login_msg_cht.conf
@@ -1,13 +1,37 @@
 //--------------------------------------------------------------
-// 熊貓模擬器 - 登錄伺服器訊息檔案 - 繁體中文版本
+// 熊貓模擬器 - 登錄服務器消息文件 - 簡體中文版本
 //--------------------------------------------------------------
-// 關於當前訊息檔案的編碼建議:
+// 關於當前消息文件的編碼建議:
 // 
-// 若您的伺服器執行在繁體中文系統上, 那麼當前檔案的可選編碼為:
-// UTF8-BOM 或 ANSI 類別的 BIG5
+// 若您的服務端運行在簡體中文系統上, 那麼當前文件的可選編碼為:
+// UTF8-BOM 或 ANSI 類型的 GBK / GBK2312
 // 
-// 若不是, 那麼請維持在 ANSI 類別的 BIG5 (建議)
+// 若不是, 那麼請維持在 ANSI 類型的 GBK / GB2312 (推薦)
 // 
-// 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在檔案讀取時進行轉碼,
-// 而轉換的目標編碼與運行伺服器的作業系統語言有關係
+// 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在文件讀取時進行轉碼,
+// 而轉換的目標編碼與運行服務端的操作系統語言有關係
 //--------------------------------------------------------------
+
+0: 賬戶未註冊.
+1: 密碼不正確.
+2: 賬戶已過期.
+3: 服務器拒絕連接.
+4: 賬戶被GM凍結.
+5: 客戶端版本低.
+6: 被禁止登陸.
+7: 服務器繁忙.
+8: Account limit from company
+9: 賬戶被DBA凍結
+10: 郵箱未認證
+11: 賬戶被GM凍結
+12: Working in DB
+13: Self Lock
+14: Not Permitted Group
+15: Not Permitted Group
+16: Account gone.
+17: 保留登錄信息.
+18: Hacking investigation.
+19: Bug investigation.
+20: Deleting char.
+21: Deleting spouse char.
+22: 未知錯誤.
