实现 multiplayer_recall_behavior 战斗配置选项

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -249,4 +249,17 @@ suspend_normal_headdirection: -1
 // 默认值为: -1 (保持原状)
 suspend_normal_sitdown: -1
 
+// 多人召唤时是否避开在线摆摊玩家? [掩码选项]
+// 
+// 在 rAthena 默认设定中, 除非是离线摆摊单位, 否则在线角色皆可以被召唤.
+// 但有时使用 @recallall 把在线摆摊的玩家全召唤走也是非常麻烦的事情,
+// 在熊猫模拟器中您可以通过此选项设定对应的行为, 避免全多人召唤指令拉走摆摊单位.
+//
+//  0 = 可召唤在线摆摊玩家 (无论是采购摊位还是出售摊位)
+// &1 = 放弃召唤在线的出售摊位
+// &2 = 放弃召唤在线的采购摊位
+//
+// 默认值为: 3 (放弃召唤在线的出售和采购摊位)
+multiplayer_recall_behavior: 3
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
