--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1047,8 +1047,8 @@
 1031: 请输入物品关键字(使用方法: @idsearch <物品关键字>).
 
 // @recallall / @guildrecall / @partyrecall
-1032: 您无权召唤某些人到当前地图。
-1033: 您无权从某些地图进行召唤，%d个玩家没有被召唤。
+1032: 您无法将玩家召唤到当前地图.
+1033: 有 %d 位玩家由于正在离线挂店或其他策略限制, 没有被召唤过来.
 
 // @guildrecall
 1034: 请输入工会名称或ID(使用方法: @guildrecall <公会名称/ID>).
