--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -473,7 +473,7 @@ Body:
 - Original: "Buying/Selling [%d/%d] price of %s (%hu) allows Zeny making exploit through buying/selling at discounted/overcharged prices! Defaulting Sell to 1 Zeny.\n"
   Translation: "買入/賣出價格 [%d/%d] 在物品 %s (%hu) 中設定不合理, 利用低價買入/高價賣出技能可以刷錢! 已將賣出價格強制設為 1 Zeny.\n"
 - Original: "Buyingstore loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: "已載入 '[{CL_WHITE}]%s[{CL_RESET}]' 的採購商店, 採購 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 的採購商店已開啟, 採購 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "Calibrating Timer Source, please wait... "
   Translation: ""
 - Original: "Can not connect to login-server.\n"
@@ -1913,7 +1913,7 @@ Body:
 - Original: "Value of 'save_settings' is not set, player's data only will be saved every 'autosave_time' (%d seconds).\n"
   Translation: ""
 - Original: "Vending loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: "已載入 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店, 出售 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店已開啟, 出售 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "WARNING: Invalid use of clif_send function\n"
   Translation: ""
 - Original: "WFIFOSET: Attempted to send zero-length packet, most likely 0x%04x (please report this).\n"
