修正对挂机单位使用部分 GM 指令会导致地图服务器崩溃的问题

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1048,7 +1048,7 @@
 
 // @recallall / @guildrecall / @partyrecall
 1032: 您无法将玩家召唤到当前地图.
-1033: 有 %d 位玩家由于正在离线挂店或其他策略限制, 没有被召唤过来.
+1033: 有 %d 位玩家当前正在摆摊, 无法被召唤.
 
 // @guildrecall
 1034: 请输入工会名称或ID(使用方法: @guildrecall <公会名称/ID>).
