完成绝大部分消息文件对繁体中文的支持 (#355)

--- a/conf/msg_conf/login_msg_cht.conf
+++ b/conf/msg_conf/login_msg_cht.conf
@@ -11,3 +11,27 @@
 // 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在檔案讀取時進行轉碼,
 // 而轉換的目標編碼與運行伺服器的作業系統語言有關係
 //--------------------------------------------------------------
+
+0: 賬戶未註冊
+1: 密碼不正確
+2: 賬戶已過期
+3: 服務器拒絕連接
+4: 賬戶被遊戲管理員凍結
+5: 客戶端版本低
+6: 賬戶已被禁止登陸
+7: 當前服務器繁忙, 無法登錄
+8: 公司賬戶限制
+9: 賬戶被數據庫管理員凍結
+10: 郵箱未認證
+11: 賬戶被遊戲管理員凍結
+12: 正在進行數據處理工作
+13: 此賬戶已被玩家自行鎖定
+14: 不允許登錄的賬戶組
+15: 不允許登錄的賬戶組
+16: 賬戶已丟失
+17: 登錄信息仍然存在, 可能是重複登錄
+18: 賬戶正在接受黑客行為調查
+19: 賬戶正在接受缺陷調查
+20: 正在刪除角色
+21: 正在刪除配偶角色
+22: 未知錯誤
