--- a/conf/msg_conf/login_msg_chs.conf
+++ b/conf/msg_conf/login_msg_chs.conf
@@ -12,26 +12,26 @@
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
 
-0: 账户未注册.
-1: 密码不正确.
-2: 账户已过期.
-3: 服务器拒绝连接.
-4: 账户被GM冻结.
-5: 客户端版本低.
-6: 被禁止登陆.
-7: 服务器繁忙.
-8: Account limit from company
-9: 账户被DBA冻结
+0: 账户未注册
+1: 密码不正确
+2: 账户已过期
+3: 服务器拒绝连接
+4: 账户被游戏管理员冻结
+5: 客户端版本低
+6: 账户已被禁止登陆
+7: 当前服务器繁忙, 无法登录
+8: 公司账户限制
+9: 账户被数据库管理员冻结
 10: 邮箱未认证
-11: 账户被GM冻结
-12: Working in DB
-13: Self Lock
-14: Not Permitted Group
-15: Not Permitted Group
-16: Account gone.
-17: 保留登录信息.
-18: Hacking investigation.
-19: Bug investigation.
-20: Deleting char.
-21: Deleting spouse char.
-22: 未知错误.
+11: 账户被游戏管理员冻结
+12: 正在进行数据处理工作
+13: 此账户已被玩家自行锁定
+14: 不允许登录的账户组
+15: 不允许登录的账户组
+16: 账户已丢失
+17: 登录信息仍然存在, 可能是重复登录
+18: 账户正在接受黑客行为调查
+19: 账户正在接受缺陷调查
+20: 正在删除角色
+21: 正在删除配偶角色
+22: 未知错误
