可控制有自定义死亡事件的魔物能触发 OnNPCKillEvent 和 OnPCKillMvpEvent 事件

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -262,4 +262,32 @@ suspend_normal_sitdown: -1
 // 默认值为: 3 (放弃召唤在线的出售和采购摊位)
 multiplayer_recall_behavior: 3
 
+// 当魔物拥有且触发了自己的死亡事件标签后,
+// 是否还会继续触发 OnNPCKillEvent 事件 [开关选项]
+// 
+// 0 = 自定义死亡事件被触发后, 不再触发 OnNPCKillEvent 事件
+// 1 = 自定义死亡事件被触发后, 继续触发 OnNPCKillEvent 事件
+// 
+// 默认值为: 0 (不再触发)
+always_trigger_npc_killevent: 0
+
+// 当 MVP 魔物拥有且触发了自己的死亡事件标签后,
+// 是否还会继续触发 OnPCKillMvpEvent 事件 [开关选项]
+// 
+// 0 = 自定义死亡事件被触发后, 不再触发 OnPCKillMvpEvent 事件
+// 1 = 自定义死亡事件被触发后, 继续触发 OnPCKillMvpEvent 事件
+// 
+// 默认值为: 1 (继续触发)
+//
+// 提示信息:
+// ----------
+// MVP 魔物也是魔物, 若 MVP 魔物有自己的自定义死亡事件, 
+// 那么也会根据 always_trigger_npc_killevent 决定是否触发 OnNPCKillEvent 事件,
+// 完成 OnNPCKillEvent 事件后才会轮到 OnPCKillMvpEvent 事件
+// 
+// 使用 OnPCKillMvpEvent 的时候务必注意它与 OnNPCKillEvent 都应该
+// 尽可能的少使用 mes 等需要等待用户输入的指令. 因为系统需要先完成 OnNPCKillEvent 事件, 
+// 若 OnNPCKillEvent 事件中有对话框需要用户确认或关闭, 就会导致 OnPCKillMvpEvent 被事件队列阻塞.
+always_trigger_mvp_killevent: 1
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
