--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -322,6 +322,8 @@ Body:
   Translation: ""
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
+- Original: "%s: found invalid timer point to %d (timer id = %d, func = %s)\n"
+  Translation: ""
 - Original: "%s: not enough arguments for %s! Skipping...\n"
   Translation: ""
 - Original: "%s: throw regex_error : %s\n"
@@ -461,9 +463,9 @@ Body:
 - Original: "Battleground StartEvent label %s should begin with '::On', skipping.\n"
   Translation: ""
 - Original: "Bonus Script loaded for CID=%d. Total: %d.\n"
-  Translation: ""
+  Translation: "已加载角色编号为: %d 的 %d 个效果脚本 (Bonus Script).\n"
 - Original: "Bonus Script saved for CID=%d. Total: %d.\n"
-  Translation: ""
+  Translation: "已保存角色编号为: %d 的 %d 个效果脚本 (Bonus Script).\n"
 - Original: "Book item %s does not exist.\n"
   Translation: ""
 - Original: "Book name for item ID %u is not known.\n"
@@ -1177,7 +1179,7 @@ Body:
 - Original: "Load party request ([{CL_BOLD}]%d[{CL_RESET}])\n"
   Translation: ""
 - Original: "Loaded %d bonus script for CID=%d\n"
-  Translation: ""
+  Translation: "已加载 %d 个效果脚本 (Bonus Script) 用于指定角色 (角色编号: %d)\n"
 - Original: "Loaded %s data from table %s for %s: %d (total: %d)\n"
   Translation: "已加载 %s 数据, 源于 %s 表 (%s=%d), 共 %d 种物品\n"
 - Original: "Loaded char (%d - %s): %s\n"
@@ -1191,7 +1193,7 @@ Body:
 - Original: "Loading NPC file: %s[{CL_CLL}]\r"
   Translation: "正在加载脚本文件: %s[{CL_CLL}]\r"
 - Original: "Loading NPCs...\r"
-  Translation: ""
+  Translation: "正在加载脚本文件...\r"
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
   Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
@@ -1217,11 +1219,11 @@ Body:
 - Original: "Logging Feeding items to %s '%s'.\n"
   Translation: "宠物与生命体的喂食记录会被存放到 %s '%s'.\n"
 - Original: "Logging MVP monster rewards to %s '%s'.\n"
-  Translation: ""
+  Translation: "击败 MVP 魔物所获得的奖励记录会被存放到 %s '%s'.\n"
 - Original: "Logging Zeny transactions to %s '%s'.\n"
-  Translation: ""
+  Translation: "游戏币 Zeny 的交易记录会被存放到 %s '%s'.\n"
 - Original: "Logging chat to %s '%s'.\n"
-  Translation: ""
+  Translation: "玩家的聊天记录会被存放到 %s '%s'.\n"
 - Original: "Logging commands to %s '%s'.\n"
   Translation: "游戏管理指令的使用记录会被存放到 %s '%s'.\n"
 - Original: "Logging in to char server...\n"
@@ -1229,7 +1231,7 @@ Body:
 - Original: "Logging item transactions to %s '%s'.\n"
   Translation: "物品交易记录将会被存放到 %s '%s'.\n"
 - Original: "Logging monster summon item usage to %s '%s'.\n"
-  Translation: ""
+  Translation: "魔物召唤道具的使用记录会被存放到 %s '%s'.\n"
 - Original: "Login server IP address : %s -> %s\n"
   Translation: "登录服务器的 IP 地址: %s -> %s\n"
 - Original: "Login server binding IP address : %s -> %s\n"
@@ -1237,7 +1239,7 @@ Body:
 - Original: "Login server unavailable, can't perform update on '%s' variable for AID:%[{PRIu32}] CID:%[{PRIu32}]\n"
   Translation: ""
 - Original: "MOB can't move. random spawn %d, class = %d, at %s (%d,%d)\n"
-  Translation: ""
+  Translation: "魔物 (游戏单位编号: %d) 因无法移动而被随机刷新. 魔物编号: %d, 卡在了: %s (%d,%d)\n"
 - Original: "Map \"%s\" not found.\n"
   Translation: "找不到名为 \"%s\" 的地图, 请检查是否输入错误.\n"
 - Original: "Map %s already loaded![{CL_CLL}]\n"
@@ -1471,7 +1473,7 @@ Body:
 - Original: "Occurred in file '[{CL_WHITE}]%s[{CL_RESET}]' on line %d and column %d.\n"
   Translation: "请检查 '[{CL_WHITE}]%s[{CL_RESET}]' 中第 %d 行第 %d 列附近的数据.\n"
 - Original: "Only allowed to save %d (mmo.hpp::MAX_PC_BONUS_SCRIPT) bonus script each player.\n"
-  Translation: ""
+  Translation: "当前每个玩家仅允许保存 %d 个效果脚本 (Bonus Script).\n"
 - Original: "Open [{CL_WHITE}]README.md[{CL_RESET}] for more information.\n"
   Translation: ""
 - Original: "Opening map cache: %s\n"
@@ -1623,7 +1625,7 @@ Body:
 - Original: "Saved guild castle (%d)\n"
   Translation: "已保存公会城堡信息 (城堡编号: %d)\n"
 - Original: "Saving %d bonus script for CID=%d\n"
-  Translation: ""
+  Translation: "正在保存 %d 个效果脚本 (Bonus Script), 源于角色编号: %d\n"
 - Original: "Saving storage data for AID=%d.\n"
   Translation: ""
 - Original: "Script sleep timer detected a character mismatch CID %d != %d\n"
@@ -2287,6 +2289,8 @@ Body:
 - Original: "buildin_bonus_script: Invalid! Script: \"%s\". Duration: %d\n"
   Translation: ""
 - Original: "buildin_bonus_script: Script string to long: \"%s\".\n"
+  Translation: ""
+- Original: "buildin_bonus_script_info: The type should be in range 0-%d, currently type is: %d.\n"
   Translation: ""
 - Original: "buildin_breakequip: No item equipped at pos %d (CID=%d/AID=%d).\n"
   Translation: ""
