使光环机制能支持非持久型特效, 能够定时对特效进行重播

--- a/db/import-tmpl/aura_db.yml
+++ b/db/import-tmpl/aura_db.yml
@@ -2,6 +2,13 @@
 # Aura Database - 光环组合数据库
 ###########################################################################
 #
+# - AuraID                  光环编号
+#   EffectList:             必填节点, 此光环的特效列表
+#     - EffectID            必填节点, 特效编号
+#       ReplayInterval      可选节点, 非持久型特效的重播间隔 (单位: 毫秒)
+#
+###########################################################################
+#
 # - AuraID
 # 光环编号, 熊猫预置的光环编号默认从 1000 开始.
 # 编号无需连续, 若你想自己添加自己的光环组合, 建议编号直接从 2000 开始.
@@ -16,24 +23,50 @@
 #
 ###########################################################################
 #
-# EffectList
-# 必填节点, 该节点下列出此光环激活时会出现的特效列表
+#   EffectList:
+#   必填节点, 列表, 属于 AuraID 的子节点
+#   该节点下列出此光环激活时会出现的特效列表, 可有多个
 #
-# 必填子节点: EffectID
-#   可以填写一个或多个, 但至少需要填写一个.
-#   此处的 EffectID 可以参考 doc/effect_list.txt 中的效果列表
+###########################################################################
+# 
+#     - EffectID
+#     必填节点, 值为数值类型, 属于 EffectList 的列表成员
+#     特效编号, 可以填写一个或多个, 但至少需要填写一个.
+#     此处的特效编号可以参考 doc/effect_list.txt 中的效果列表
+#
+###########################################################################
+# 
+#     ReplayInterval
+#     可选节点, 值为数值类型, 属于 EffectID 的子节点
+#     非持久型特效的重播间隔 (单位: 毫秒), 持久型特效无需设置或设为 0
 #
 ###########################################################################
 #
-# 挑选 EffectID 的注意事项
+# 持久型特效的挑选方法
 #
 # 默认情况下此数据库已经预制了几十个光环组合, 但他们都非常普通.
-# 若你想自己挑选 EffectID 来作为效果, 可以在游戏中使用 @effect 指令来挑选.
+# 若你想自己挑选特效来作为效果, 可以在游戏中使用 @effect 指令来挑选.
 #
 # 具体做法为:
 # 1. 使用 @effect 将 doc/effect_list.txt 中的效果试一下
 # 2. 观察效果是一直出现, 还是会自动消失
-# 3. 若效果在过图和小退之前会一直存在, 那么说明它合适作为光环的 EffectID
+# 3. 若效果在过图和小退之前会一直存在, 那么说明它合适作为光环的持久特效
+# 4. 持久特效请不要设置 ReplayInterval, 否则光环将持续叠加到客户端崩溃
+# 
+###########################################################################
+#
+# 非持久型特效的挑选方法
+# 
+# 有些特效非常好看但是播放几秒钟就会自动消失, 这些短暂的特效称为非持久型特效.
+# 可利用 ReplayInterval 来使服务端几秒钟就播放一次短暂特效.
+# 
+# 具体做法为:
+# 1. 使用 @effect 将 doc/effect_list.txt 中的效果试一下
+# 2. 观察效果是一直出现, 还是会自动消失, 若消失则留意它大概的时长
+# 3. 将特效设置到光环中时, 也为它设置 ReplayInterval (可参考预置的 1064 光环)
+# 4. 若非常在意特效的衔接, 那么请多次测试特效的播放时长并正确设置间隔即可
+#
+###########################################################################
 #
 # 提示:
 # 自己添加的光环组合, 请定义到 db/import/aura_db.yml 文件中,
