--- a/db/import-tmpl/item_properties.yml
+++ b/db/import-tmpl/item_properties.yml
@@ -2,6 +2,15 @@
 # Item Properties Database - 道具特殊属性数据库
 ###########################################################################
 #
+#  - ItemID                      想进行特殊设置的道具编号
+#    Property                    可选节点, 用来标出物品有什么特殊属性
+#    ControlViewID:              可选节点, 控制是否需要处理隐藏此道具的外观编号
+#      InvisibleWhenISee         可选节点, 当我自己在装备面板中查看装备时, 隐藏外观
+#      InvisibleWhenTheySee      可选节点, 当其他人查看我的装备时, 隐藏外观
+#    AnnouceRules                可选节点, 控制物品掉落时的特殊公告时机
+#
+###########################################################################
+#
 # - ItemID
 # 想进行特殊设置的道具编号
 #
@@ -15,38 +24,47 @@
 #
 ###########################################################################
 #
-# Property
-# 可选节点, 用来标出物品有什么特殊属性
-#
-# &1 - 表示避免物品被玩家主动使用而消耗
-# &2 - 避免物品被作为发动技能的必要道具而消耗
-# &4 - 表示此物品是一个护身符类型的道具
-#
-# 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
-#
-###########################################################################
-#
-# ControlViewID
-# 可选节点, 控制是否需要处理隐藏此道具的外观编号
-#
-# 可选子节点: InvisibleWhenISee
-#   若设置为 true 表示: 当我自己在装备面板中查看装备时, 隐藏它的外观编号
-#   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
-#
-# 可选子节点: InvisibleWhenTheySee
-#   若设置为 true 表示: 当其他人查看我的装备时, 隐藏它的外观编号
-#   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
+#   Property
+#   可选节点, 值为数值类型, 属于 ItemID 的子节点
+#   用来标出物品有什么特殊属性
+#  
+#   &1 - 表示避免物品被玩家主动使用而消耗
+#   &2 - 避免物品被作为发动技能的必要道具而消耗
+#   &4 - 表示此物品是一个护身符类型的道具
+#  
+#   这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
 #
 ###########################################################################
 #
-# AnnouceRules
-# 可选节点, 控制物品掉落时的特殊公告时机
-# 
-# &1 - 打死魔物, 魔物将道具掉落到地上时公告
-# &2 - 打死魔物, 掉落 MVP 奖励到玩家的背包时公告
-# &4 - 使用"偷窃"技能, 从魔物身上偷到物品时公告
-# 
-# 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
+#   ControlViewID:
+#   可选节点, 列表, 属于 ItemID 的子节点
+#   该节点中的选项用于控制是否需要在特定场景下隐藏此道具的外观
+#
+###########################################################################
+#  
+#     InvisibleWhenISee
+#     可选节点, 值为布尔型, 属于 ControlViewID 的子节点
+#     若设置为 true 表示: 当我自己在装备面板中查看装备时, 隐藏它的外观
+#     没有此字段, 或设为 false 表示: 不隐藏它的外观
+#  
+###########################################################################
+#
+#     InvisibleWhenTheySee
+#     可选节点, 值为布尔型, 属于 ControlViewID 的子节点
+#     若设置为 true 表示: 当其他人查看我的装备时, 隐藏它的外观
+#     没有此字段, 或设为 false 表示: 不隐藏它的外观
+#
+###########################################################################
+#
+#   AnnouceRules
+#   可选节点, 值为数值类型, 属于 ItemID 的子节点
+#   控制物品掉落时的特殊公告时机
+#   
+#   &1 - 打死魔物, 魔物将道具掉落到地上时公告
+#   &2 - 打死魔物, 掉落 MVP 奖励到玩家的背包时公告
+#   &4 - 使用"偷窃"技能, 从魔物身上偷到物品时公告
+#   
+#   这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
 #
 ###########################################################################
 
