睡不著做一些中文化吧呵呵呵呵呵

--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -1,8 +1,8 @@
 // --------------------------------------------------------------
-// -                        Core Scripts                        -
+// -                        核心腳本集                          -
 // --------------------------------------------------------------
-
-// -------------------------- Airport ---------------------------
+//
+// -------------------------- 飛空艇 ---------------------------
 npc: npc/airports/airships.txt
 npc: npc/airports/einbroch.txt
 npc: npc/airports/hugel.txt
@@ -11,7 +11,7 @@ npc: npc/airports/lighthalzen.txt
 npc: npc/airports/rachel.txt
 npc: npc/airports/yuno.txt
 
-// --------------------- Battle Grounds -------------------------
+// --------------------------- 戰場 -----------------------------
 // - Flavius ----------------------------------------------------
 npc: npc/battleground/flavius/flavius_enter.txt
 npc: npc/battleground/flavius/flavius01.txt
@@ -29,7 +29,7 @@ npc: npc/battleground/tierra/tierra02.txt
 // --------------------------------------------------------------
 npc: npc/battleground/bg_common.txt
 
-// --------------------------- Cities ---------------------------
+// ------------------------- 城鎮人員 ---------------------------
 npc: npc/cities/alberta.txt
 npc: npc/cities/aldebaran.txt
 npc: npc/cities/amatsu.txt
@@ -72,20 +72,20 @@ npc: npc/cities/yuno.txt
 //npc: npc/events/nguild/nguild_kafras.txt
 // --------------------------------------------------------------
 //npc: npc/events/bossnia.txt
-// - Official indian Ro Event Children Week
+// - 印度官方伺服器兒童節活動
 //npc: npc/events/children_week.txt
-// - Official Christmas Events (iRO)
+// - 日本官方伺服器聖誕節活動 
 //npc: npc/events/christmas_2005.txt
 //npc: npc/events/christmas_2008.txt
 //npc: npc/events/christmas_2013.txt
 //npc: npc/events/dumplingfestival.txt
-// - Official Easter (2008) Event (iRO)
+// - 日本官方伺服器復活節活動(2008年)
 //npc: npc/events/easter_2008.txt
-// - Official Easter (2010) Event
+// - 美服(?)正式伺服器復活節活動(2010)
 //npc: npc/events/easter_2010.txt
-// - Official kRO, idRO Skill Reset Event
+// - 韓服官方伺服器 kRO 技能重置活動
 //npc: npc/events/event_skill_reset.txt
-// - Events related to WoE SE Guild Dungeons.
+// - 跟 Woe、sE攻城戰相關的事件
 npc: npc/events/gdevent_aru.txt
 npc: npc/events/gdevent_sch.txt
 // - God Item SE post-creation Event
